WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105965
[WK2 NetworkProcess] Uploading fails if a client modified the request
https://bugs.webkit.org/show_bug.cgi?id=105965
Summary
[WK2 NetworkProcess] Uploading fails if a client modified the request
Alexey Proskuryakov
Reported
2013-01-02 16:03:00 PST
If a client has modified the request in willSendRequest, FormData becomes incorrect in WebCore::ResourceRequest. <
rdar://problem/12916582
>
Attachments
proposed fix
(6.84 KB, patch)
2013-01-02 16:09 PST
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-01-02 16:09:11 PST
Created
attachment 181099
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-01-02 16:28:03 PST
Committed <
http://trac.webkit.org/r138676
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug